Made changes to fix contrast issues

--- a/samples/sample1/style.css
+++ b/samples/sample1/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-  color: rgb(184, 13, 13);
+  color: maroon;
   text-align: center;
   font-size: 50px;
   font-weight: bold;
